--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,9 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": "stylelint-config-recommended-scss",
   "ignoreFiles": [],
+  "plugins": [
+    "stylelint-scss"
+  ],
   "rules": {
     "rule-empty-line-before": "always",
     "number-leading-zero": "never",
@@ -13,5 +16,6 @@
     "no-empty-source": null,
     "comment-whitespace-inside": null,
     "declaration-block-no-redundant-longhand-properties": null,
+    "scss/at-extend-no-missing-placeholder": true
   }
 }
